# whatwg_streams_rs

./: Cargo.toml  README.md  index1.html  index2.html  index3.html  index4a.html  index4b.html  index4c.html  index5.html
crates/whatwg_streams/: Cargo.toml  README.md
crates/whatwg_streams/examples/: readable_source.rs  writable_sink.rs
crates/whatwg_streams/src/: lib.rs
crates/whatwg_streams/src/streams/: byte_source_trait.rs  byte_state.rs  mod.rs  readable.rs  transform.rs  writable.rs
crates/whatwg_streams/tests/: WPT_COVERAGE.md  compile_tests.rs
crates/whatwg_streams/tests/byte_stream/: mod.rs
crates/whatwg_streams/tests/piping/: mod.rs
crates/whatwg_streams/tests/readable/: cancel.rs  general.rs  tee.rs
crates/whatwg_streams/tests/transform/: mod.rs
crates/whatwg_streams/tests/writable/: abort.rs  async_write.rs  close.rs  general.rs  write.rs
demos/native/: Cargo.toml
demos/native/examples/: README.md
demos/native/examples/advanced/: backpressure_demo.rs  multi_stage_pipeline.rs
demos/native/examples/basic/: simple_readable.rs  simple_transform.rs  simple_writable.rs
demos/native/examples/bytes/: binary_protocol.rs  buffer_pool.rs  file_reader_byob.rs
demos/native/examples/compression/: archive_creator.rs  decompress_stream.rs  gzip_transform.rs
demos/native/examples/file_processing/: csv_processor.rs  json_stream.rs  log_filter.rs  people.json  test_people.json
demos/native/examples/network/: http_response.rs  tcp_relay.rs  websocket_proxy.rs
demos/native/src/: main.rs
demos/wasm/: Cargo.toml  README.md  build.sh  index.html
demos/wasm/.cargo/: config.toml
demos/wasm/append-child/: Cargo.toml  index.html
demos/wasm/append-child/src/: lib.rs
demos/wasm/grayscale-png/: Cargo.toml  index.html  index1.html
demos/wasm/grayscale-png/src/: lib.rs  lib1.rs
demos/wasm/invert-canvas/: Cargo.toml  index.html
demos/wasm/invert-canvas/src/: lib.rs
demos/wasm/png-chunks/: Cargo.toml  index.html
demos/wasm/png-chunks/src/: lib.rs
demos/wasm/service-worker-stream/: Cargo.toml  index.html  index1.html  index3.html  service-worker.js
demos/wasm/service-worker-stream/src/: lib.rs
demos/wasm/streaming-element/: Cargo.toml  index.html  index1.html
demos/wasm/streaming-element-backpressure/: Cargo.toml  index.html
demos/wasm/streaming-element-backpressure/src/: lib.rs
demos/wasm/streaming-element/src/: lib.rs  lib1.rs
demos/wasm/streaming-fetch-progress/: Cargo.toml  index.html
demos/wasm/streaming-fetch-progress/src/: lib.rs
docs/adr/: 0001-zero-copy-byte-streams.md
docs/explainers/: byte-push-default-reader-stranding.md  byte-read-delivery.md  byte-source-zero-copy.md  spec-divergences.md
examples/: piping.rs  transform.rs
src/: lib.rs  platform.rs
src/dlc/: mod.rs
src/dlc/ideation/: mod.rs
src/dlc/ideation/a/: integrations.rs  mod.rs
src/dlc/ideation/b/: stream.rs
src/dlc/ideation/c/: mod.rs  stream_error.rs  transform_stream.rs  writeable_stream.rs
src/dlc/ideation/d/: byte_source_trait.rs  byte_state.rs  mod.rs  readable.rs  readable_new.rs  readable_sampling_b.rs  transform.rs  writable.rs  writable_new.rs  writable_send_and_non_send.rs
src/dlc/ideation/e/: mod.rs
src/dlc/ideation/e/local/: byte_source_trait.rs  byte_state.rs  error.rs  macros.rs  mod.rs  readable.rs  transform.rs  writable.rs
src/dlc/ideation/e/send/: byte_source_trait.rs  byte_state.rs  error.rs  mod.rs  readable.rs  transform.rs  writable.rs
src/streams/: byte_source_trait.rs  byte_state.rs  error.rs  errors.rs  mod.rs  readable.rs  shared.rs  transform.rs  writable.rs
src/streams/local/: byte_state.rs  error.rs  mod.rs  readable.rs  transform.rs  writable.rs
src/streams/send/: byte_source_trait.rs  byte_state.rs  error.rs  mod.rs  readable.rs  transform.rs  writable.rs
tests/: WPT_COVERAGE.md  byte_stream.rs  compile_tests.rs  helpers.rs  piping.rs  readable_stream.rs  send_feature_test.rs  tee.rs  wpt.rs  writable_stream.rs
tests/byte_stream/: mod.rs
tests/piping/: mod.rs
tests/queuing_strategies/: mod.rs
tests/readable/: cancel.rs  general.rs  mod.rs  tee.rs
tests/transform/: mod.rs
tests/writable/: abort.rs  backpressure.rs  close.rs  general.rs  mod.rs  sink_trait.rs  start.rs  write.rs
