[package]
name = "local_stream_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
futures = "0.3"
whatwg_streams = { path = "../whatwg_streams_rs" }
web-sys = { version = "0.3.80", features = [
    "console",
    "HtmlElement",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
wasm-bindgen-futures = "0.4.53"
wasm-bindgen-test = "0.3.53"
#rand = "0.9.2"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
#getrandom = "0.3.3"
#getrandom = { version = "0.3.3", features = ["wasm_js"] }
fastrand = "2.3.0"
js-sys = "0.3.80"
