[package]
name = "whatwg_streams"
version = "0.1.0-alpha.5"
edition = "2024"
description = "whatwg_streams for rust"
license = "MIT"

[features]
default = ["send"]
send = []          # Multi-threaded: Arc-based, requires Send+Sync
local = []         # Single-threaded: Rc-based, no Send/Sync required

[dependencies]
futures = "0.3.31"
parking_lot = "0.12.4"
pin-project = "1.1.10"

[dev-dependencies]
#tokio = "1.44.2"
tokio = { version = "1.44.2", features = ['full'] }
tokio_localset_test = { git = "https://github.com/ifeanyi-ugwu/tokio_localset_test.git", rev = "7fa973b8da300ea8ebbb6ff90f59ef760fcf9bfc" }
