[workspace]
resolver = "2"
members = [
    "append-child",
    "streaming-element",
    "streaming-element-backpressure",
    "streaming-fetch-progress",
    "service-worker-stream",
    "grayscale-png",
    "invert-canvas",
    "png-chunks",
]

# Optional: apply settings to all crates
[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.80"
web-sys = { version = "0.3.80", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "CustomElementRegistry",
    "Element",
    "Node",
    "CanvasRenderingContext2d",
    "ImageData",
    "Response",
    "Request",
    "ReadableStream",
    "WritableStream",
] }

# Local crate for streams implementation
whatwg_streams = { path = "../../whatwg_streams_rs" }

# Profiles only take effect at the workspace root; applies to every demo.
[profile.release]
opt-level = "z" # smaller wasm output
