[workspace]
resolver = "2"
members = [
    "append-child",
    "streaming-element",
    "streaming-element-backpressure",
    "streaming-fetch-progress",
    "service-worker-stream",
    "grayscale-png",
    "invert-canvas",
    "png-chunks",
]

[workspace.dependencies]
# Single-threaded (Rc-based) build; the wasm demos run on one thread. Kept apart
# from the root workspace so this never unifies with the native demo's `send`.
whatwg_streams = { path = "../../crates/whatwg_streams", default-features = false }

# opt-level = "z" keeps the wasm output small. Lives here, not at the repo root,
# so native release builds keep the default opt-level = 3.
[profile.release]
opt-level = "z"
