[package]
name = "grayscale_png"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
whatwg_streams = { path = "../../../whatwg_streams_rs", default-features = false, features = ["local"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
js-sys = "0.3"
png = "0.18.0"
