[package]
name = "png_chunks_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.80"
web-sys = { version = "0.3.80", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Response",
    "ReadableStream",
] }
whatwg_streams = { workspace = true, features = ["local"] }
