[package]
name = "service_worker_stream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
#whatwg-streams = { version = "0.3", features = ["local"] }
whatwg_streams = { path = "../../../whatwg_streams_rs" }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }

[profile.release]
opt-level = "z" # optional: smaller wasm size
