[package]
name = "service_worker_stream"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
whatwg_streams = { workspace = true, features = ["local"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
