[package]
name = "streaming_backpressure_demo"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
whatwg_streams = { workspace = true, features = ["local"] }
web-sys = { version = "0.3.80", features = [
    "Window",
    "Document",
    "HtmlElement",
] }
js-sys = "0.3.80"
gloo-timers = { version = "0.2", features = ["futures"] }
