[package]
name = "streaming_element_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
whatwg_streams = { path = "../../../whatwg_streams_rs" }
web-sys = { version = "0.3.80", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "CustomElementRegistry",
    "Element",
    "Node",
] }
js-sys = "0.3.80"
