[package]
name = "fetch_progress_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.80", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Response",
    "Headers",
    "ReadableStream",
] }
js-sys = "0.3.80"
whatwg_streams = { path = "../../../whatwg_streams_rs" }
